try fix bottom spacing

--- a/wwwroot/css/file-img-preview.css
+++ b/wwwroot/css/file-img-preview.css
@@ -8,7 +8,7 @@
 }
 
 @media (width < 800px) {
-    main {
+    .main-canvas-fit-height {
         margin-bottom: 0;
     }
 }
